--- a/package.json
+++ b/package.json
@@ -14,11 +14,16 @@
     "gulp-connect": "^5.0.0",
     "gulp-csso": "^2.0.0",
     "gulp-imagemin": "^3.1.1",
+    "gulp-inline-source": "^3.0.0",
     "gulp-load-plugins": "^1.4.0",
     "gulp-rename": "^1.2.2",
     "gulp-ruby-sass": "^2.1.1",
     "gulp-sass": "^3.0.0",
+    "gulp-save": "^1.2.1",
+    "gulp-sitemap": "^4.2.0",
+    "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^1.9.1",
-    "gulp-uglify": "^2.0.0"
+    "gulp-uglify": "^2.0.0",
+    "gulp-uncss": "^1.0.6"
   }
 }
