--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.1",
     "gulp-connect": "^5.0.0",
+    "gulp-cssnano": "^2.1.2",
     "gulp-csso": "^2.0.0",
     "gulp-imagemin": "^3.1.1",
     "gulp-inline-source": "^3.0.0",
